# Silofuse-reproduced

./: Makefile  README.md  evaluation.py  main.py  pyproject.toml  requirements.txt
Silofuse/: __init__.py  dataset.py  features.py  plots.py
Silofuse/modeling/: predict.py  train.py  vae.py
VAE/: __init__.py  config.py  dataset.py  features.py  plots.py
VAE/modeling/: generate_latent.py  main.py  vae.py
VAE/utils/: __init__.py  dataframe_utils.py  postprocess.py  resemblance.py
central_backbone/data/bank/: X_cat_train.npy  X_num_train.npy  y_test.npy
central_backbone/data/bank_latent/: X_num_test.npy  X_num_val.npy  info.json  y_test.npy  y_train.npy  y_val.npy
central_backbone/data/diabetes_latent/: X_num_val.npy  info.json  y_test.npy  y_train.npy  y_val.npy
central_backbone/exp/bank_latent/: X_num_train.npy  config.toml  info.json  model_ema.pt  y_train.npy
central_backbone/exp/diabetes_latent/: X_num_train.npy  X_num_unnorm.npy  config.toml  loss.csv  y_train.npy
central_backbone/scripts/: eda1.ipynb  eval_catboost.py  eval_mlp.py  eval_seeds.py  eval_seeds_simple.py  pipeline.py  sample.py  train.py  tune_evaluation_model.py  utils_train.py
data/: data.xml.dvc
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1.0-tabddpm-initial.ipynb  1.0-tabsyn-ini.ipynb  1.0-vae-tvae-initial.ipynb
tabddpm/: agg_results.ipynb  requirements.txt
tabddpm/data/bank/: X_cat_test.npy  (+6 more)
tabddpm/scripts/: eda1.ipynb  eval_simple.py  resample_privacy.py  train.py  tune_ddpm.py  utils_train.py
tabsyn/: process_dataset.py
tabsyn/eval/: eval_density.py
(+116 files in other folders)
